--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -45,5 +45,5 @@
 <div *ngIf="cargando" class="alert alert-info text-center mt-3">
     <h4 class="alert-heading">Cargando</h4>
     <p><i class="fa fa-spinner fa-spin fa-2x"></i></p>
-    <p class="mb-0">Esere por favor...</p>
+    <p class="mb-0">Espere por favor...</p>
 </div>
